k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\Users\user\AppData\Local\Microsoft\WinGet\Links\kompose.exe --file .\docker-compose.yaml convert
    kompose.version: 1.30.0 (9d8dcb518)
  labels:
    io.kompose.service: backend
  name: backend
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: backend
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: C:\Users\user\AppData\Local\Microsoft\WinGet\Links\kompose.exe --file .\docker-compose.yaml convert
        kompose.version: 1.30.0 (9d8dcb518)
      labels:
        io.kompose.network/django-react-nginx-mysql-backend-database-network: "true"
        io.kompose.service: backend
    spec:
      containers:
        - image: isatoshi/django-react-nginx-mysql-backend
          name: backend-container
          ports:
            - containerPort: 8000
          resources: {}
      restartPolicy: Always
status: {}
