k8s/webserver-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\Users\user\AppData\Local\Microsoft\WinGet\Links\kompose.exe --file .\docker-compose.yaml convert
    kompose.version: 1.30.0 (9d8dcb518)
  labels:
    io.kompose.service: webserver
  name: webserver
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: webserver
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: C:\Users\user\AppData\Local\Microsoft\WinGet\Links\kompose.exe --file .\docker-compose.yaml convert
        kompose.version: 1.30.0 (9d8dcb518)
      labels:
        io.kompose.network/django-react-nginx-mysql-backend-database-network: "true"
        io.kompose.service: webserver
    spec:
      containers:
        - image: isatoshi/django-react-nginx-mysql-webserver
          name: webserver-container
          # ports:
            # - containerPort: 80
            #   hostPort: 80
            #   protocol: TCP
          resources: {}
          volumeMounts:
            - mountPath: /var/www/frontend
              name: frontend-volume
      restartPolicy: Always
      volumes:
        - name: frontend-volume
          persistentVolumeClaim:
            claimName: frontend-volume
status: {}
