k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: default
spec:
  ports:
    - name: "8000"
      port: 8000
      targetPort: 8000
  type: ClusterIP
  selector:
    component: backend
status:
  loadBalancer: {}
