k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: C:\Users\user\AppData\Local\Microsoft\WinGet\Links\kompose.exe --file .\docker-compose.yaml convert
    kompose.version: 1.30.0 (9d8dcb518)
  labels:
    io.kompose.service: frontend
  name: frontend
  namespace: default
spec:
  ports:
    - name: "3000"
      port: 3000
      targetPort: 3000
  type: ClusterIP
  selector:
    io.kompose.service: frontend
status:
  loadBalancer: {}
