k8s/webserver-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: C:\Users\user\AppData\Local\Microsoft\WinGet\Links\kompose.exe --file .\docker-compose.yaml convert
    kompose.version: 1.30.0 (9d8dcb518)
  labels:
    io.kompose.service: webserver
  name: webserver
  namespace: default
spec:
  type: ClusterIP
  ports:
    - name: "80"
      port: 80
      targetPort: 80
  selector:
    io.kompose.service: webserver
status:
  loadBalancer: {}
